Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46693

fromHslF print a misleading Warning message

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.6.0 Beta
    • 5.4.2
    • Other
    • None

    Description

      fromHslF and fromHsl give a false warning if any argument is out of range.
      It is only a false Message but quite confusing if you search for the Error.

      qcolor.cpp
      QColor QColor::fromHslF(qreal h, qreal s, qreal l, qreal a)
      {
          if (((h < 0.0 || h > 1.0) && h != -1.0)
              || (s < 0.0 || s > 1.0)
              || (l < 0.0 || l > 1.0)
              || (a < 0.0 || a > 1.0)) {
              qWarning("QColor::fromHsvF: HSV parameters out of range");
              return QColor();
          }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            Grimm Daniel Grimm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes