Fix warning message to match the function signature

Change-Id: Ie21d63e29351dae9a52998e3d1068500e502ec5a
Task-number: QTBUG-46693
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>

cregit: 661bcb79c8dee37da8bd9f8e231829879d25847d https://github.com/qt/qtbase/commit/661bcb79c8dee37da8bd9f8e231829879d25847d